<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShoppingScreen" >


    <Button
        android:id="@+id/shoppingBack"
        android:layout_width="61dp"
        android:layout_height="47dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="2dp"
        android:rotationY="-21"
        app:cornerRadius="20dp"
        app:icon="?attr/actionModeCloseDrawable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/submitOrder"
        android:layout_width="255dp"
        android:layout_height="54dp"
        android:layout_marginBottom="17dp"
        android:text="Submit"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout5" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="197dp"
        android:layout_height="49dp"
        android:layout_marginTop="36dp"
        android:text="Products"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="390dp"
        android:layout_height="65dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <Button
            android:id="@+id/mask"
            android:layout_width="66dp"
            android:layout_height="41dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="11dp"
            android:text="Add"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/mask" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="128dp"
            android:layout_height="42dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="56dp"
            android:layout_marginBottom="12dp"
            android:text="Medical Mask"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/counter2"
            app:layout_constraintStart_toEndOf="@+id/imageView19"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/counter2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="23dp"
            android:text="0X"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/mask"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="390dp"
        android:layout_height="65dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView27">

        <Button
            android:id="@+id/rapidTest"
            android:layout_width="66dp"
            android:layout_height="41dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="12dp"
            android:text="Add"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/pcrtesttwo" />

        <TextView
            android:id="@+id/textView33"
            android:layout_width="128dp"
            android:layout_height="42dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="58dp"
            android:layout_marginBottom="14dp"
            android:text="Rapid Covid-19 test"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/counter1"
            app:layout_constraintStart_toEndOf="@+id/imageView22"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/counter1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="23dp"
            android:text="0X"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/rapidTest"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="390dp"
        android:layout_height="65dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <Button
            android:id="@+id/sanitiser"
            android:layout_width="66dp"
            android:layout_height="41dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="11dp"
            android:text="Add"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/soaptwo" />

        <TextView
            android:id="@+id/textView31"
            android:layout_width="128dp"
            android:layout_height="42dp"
            android:layout_marginStart="17dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="57dp"
            android:layout_marginBottom="12dp"
            android:text="Hand sanitiser"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/counter3"
            app:layout_constraintStart_toEndOf="@+id/imageView20"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/counter3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="23dp"
            android:text="0X"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/sanitiser"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="390dp"
        android:layout_height="65dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

        <Button
            android:id="@+id/painKiller"
            android:layout_width="66dp"
            android:layout_height="41dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="12dp"
            android:text="Add"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView28"
            android:layout_width="63dp"
            android:layout_height="65dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icons13" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="128dp"
            android:layout_height="42dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="57dp"
            android:layout_marginBottom="10dp"
            android:text="Pain Killer"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/counter4"
            app:layout_constraintStart_toEndOf="@+id/imageView28"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/counter4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="23dp"
            android:text="0X"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/painKiller"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout5"
        android:layout_width="390dp"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout4">

        <Button
            android:id="@+id/multivitamin"
            android:layout_width="66dp"
            android:layout_height="41dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="12dp"
            android:text="Add"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/multivitamin" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="128dp"
            android:layout_height="42dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="56dp"
            android:layout_marginBottom="9dp"
            android:text="Multivitamin"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/counter5"
            app:layout_constraintStart_toEndOf="@+id/imageView27"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/counter5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="23dp"
            android:text="0X"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/multivitamin"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/onlyOneOrderWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="You Can Only Have One Active Order At A Time"
        android:textColor="#FF0000"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/submitOrder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout5" />

</androidx.constraintlayout.widget.ConstraintLayout>